<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>flir_ptu_driver</name>
  <version>1.0.2</version>
  <description>ROS 2 driver for FLIR pan-tilt units with serial and TCP/Ethernet support.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>GPL-2.0-or-later</license>

  <url type="repository">https://github.com/ros-drivers/flir_ptu</url>
  <url type="bugtracker">https://github.com/ros-drivers/flir_ptu/issues</url>

  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>
  <author email="erik@cse.wustl.edu">Erik Karulf</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_updater</depend>

  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
